samples/_failures_safe/1761611922_ceca01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_356f75a8.c: In function ‘main’:
./samples/SAFE/__tmp_356f75a8.c:148:5: error: expected declaration or statement at end of input
  148 |     init_matrix(&mat2);
      |     ^~~~~~~~~~~
